feat: game rest integration
